# RVCE-ELs

./: README.md
AIML Lab/: README.md  pyproject.toml
AIML Lab/LFCC_LCNN/: model.py
AIML Lab/Transformer/: audio_dataset.py  model.py
DAA Lab/: README.md
DAA Lab/SudokuSolver/: CMakeLists.txt  CMakeLists.txt.user.089bd8c  Project File Structure.md  README.md  main.cpp  mainwindow.cpp  mainwindow.h  sudokusolver.cpp  sudokusolver.h
DBMS Lab/: README.md
DBMS Lab/backend/: sample.csv
DBMS Lab/backend/src/routes/: analysis.ts  health.ts
DBMS Lab/backend/src/services/: authService.ts  flowService.ts
DBMS Lab/backend/src/utils/: csvParser.ts
DBMS Lab/frontend/: index.html
DBMS Lab/frontend/src/pages/: LoginPage.tsx
GestureX/: .gitignore  README.md  requirements.txt  test.py
GestureX/code/: ASL.py  GUI.py  HandTrackingModule.py  Help2.py  brightnessControl.py  dataCollection.py  dataCollection_Gestures.py  getGesture.py  getLetter.py  mainProg.py  mouseControl.py  trackHand.py  volumeControl.py
GestureX/data/: gestureData.csv  gestureLabels.csv  sign_data.csv
GestureX/models/: ASL_model.h5  gesture_model.h5
GestureX/training code/: trainModel.ipynb  train_ASL_model.ipynb
OS Lab/: README.md  manual.c  shell.c
Python/: .gitignore  Planet Distances.csv  README.md  createDB.py  theoryEL.py
Sem 5/AIML Lab/LFCC_LCNN/: inference.py
Sem 5/AIML Lab/Transformer/: inference.py  logger.py
Sem 5/DBMS Lab/aiml_part/: .env
Sem 5/EL-AIML-LAB/: test.ipynb
Sem 5/EL-AIML-LAB/LFCC_LCNN/: audio_dataset.py  train.py
Sem 5/EL-AIML-LAB/Transformer/: train.py
Sem 5/EL-DBMS-LAB/aiml_part/: main.py  pyproject.toml  schemas.py
Sem 5/EL-DBMS-LAB/backend/: package-lock.json  package.json
Sem 5/EL-DBMS-LAB/frontend/: package-lock.json  package.json
Sem 5/EL-Main/backend_lang/: RAG_README.md  agent.py  legal_classifier.py  pyproject.toml
Sem 5/EL-Main/backend_lang/Notebooks/: image_analyser.ipynb
Sem 5/EL-Main/frontend/: index.html  tailwind.config.ts
Sem 5/Main/: .gitignore
Sem 5/Main/backend_express/: .env-example  ngrok-setup.js
Sem 5/Main/backend_lang/: main.py
Sem 5/Main/frontend/: REDESIGN-COMPLETE.md  package.json  vite.config.ts
UDAAN - AI Lawyer/: README.md
UDAAN - AI Lawyer/backend_express/: .gitignore  index.js  package.json
UDAAN - AI Lawyer/backend_express/constants/: botStates.js
UDAAN - AI Lawyer/backend_express/controllers/: ragController.js  telegramBotController.js
UDAAN - AI Lawyer/backend_express/routes/: caseRouter.js  ragRouter.js  telegramRouter.js
UDAAN - AI Lawyer/backend_express/services/: telegramService.js
UDAAN - AI Lawyer/backend_express/utils/: redisUtils.js
UDAAN - AI Lawyer/backend_lang/: analyse.py  rag.py  test_classify.py  test_rag.py
UDAAN - AI Lawyer/backend_lang/Notebooks/: agent.ipynb
UDAAN - AI Lawyer/frontend/: README.md
(+65 files in other folders)
