[project]
name = "ai-lawyer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.1",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.10",
    "langchain-tavily>=0.2.12",
    "langgraph>=0.6.10",
    "sentence-transformers>=5.1.1",
    "transformers>=4.57.0",
    "torch",
    "torchvision",
    "torchaudio",
    "timm>=1.0.20",
    "pillow>=11.3.0",
    "accelerate>=1.10.1",
    "easyocr>=1.7.2",
    "pymupdf>=1.26.5",
    "motor>=3.7.1",
    "pymongo>=4.15.3",
    "fastapi[standard]>=0.128.0",
    "langchain-groq>=1.1.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
